svgcheck (0.5.12) distribution(s); urgency=low

	* Copy the preserve whitespace parameter from rfclint.  This preserves formatting.
	* Preserve comments when doing a repair
	* Change the test scripts to use the same parsing options
	* Add exit comment on success/Failure

-- Jim Schaad <ietf@augustcellars.com>  Fri 22 Feb 2019 12:00:00 -0800

svgcheck (0.5.4) distribution(s); urgency=low

	* Allow for #fff to be tagged as white.  Original discussions thought this was not going to be used.
	* Add the numeric values for font-weight

-- Jim Schaad <ietf@augustcellars.com>  Wed 09 MAY 2018 12:00:00 -0800

svgcheck (0.5.1) distribution(s); urgency=low

	* Setup things so it publishes to PyPI

-- Jim Schaad <ietf@augustcellars.com>  Sun 04 MAR 2018 19:00:00 -0800

svgcheck (0.5.0) distribution(s); urgency=low

	* No changes

-- Jim Schaad <ietf@augustcellars.com>  Sun 25 Feb 2018 19:00:00 -0800

svgcheck (0.0.3) distribution(s); urgency=urgency

	* Correct black/white substitutions on RGB colors

-- Jim Schaad <ietf@augustcellars.com>  Sun 11 Feb 2018 19:00:00 -0800

svgcheck (0.0.2) distribution(s); urgency=urgency

	* Rewrite style proprety handling to promote items rather than validate in place
	* Add more test cases to get coverage number above 85%

-- Jim Schaad <ietf@augustcellars.com> FRI 25 01 2018 09:00:00 -0800

svgcheck (0.0.1) distribution(s); urgency=urgency

 * Create the initial simple version
 * Create python setup program

-- Jim Schaad <ietf@augustcellars.com>  Fri 05 Jan 2018 12:00:00 -0800
