@@ -22,7 +22,7 @@
 	Put in some text followed by a picture.
       </t>
       <artwork type="svg">
-	<svg xmlns="http://www.w3.org/2000/svg" height="100" width="100" datatype="foobar">
+	<svg xmlns="http://www.w3.org/2000/svg" height="100" width="100" datatype="foobar" viewBox="0 0 100.0 100.0">
 	  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="black"/>
 	</svg>
       </artwork>
