@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<svg:svg fill-opacity="inherit" stroke-opacity="inherit" fill="none" fill-rule="inherit" stroke="black" stroke-dasharray="inherit" stroke-dashoffset="inherit" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="inherit" stroke-width="inherit" color="white" color-rendering="auto" vector-effect="none" direction="ltr" unicode-bidi="normal" solid-color="#000000" solid-opacity="inherit" display-align="auto" line-increment="auto" stop-color="#FFFFFF" stop-opacity="inherit" font-family="inherit" font-size="inherit" font-style="normal" font-variant="normal" font-weight="normal" text-anchor="start" text-align="start" id="NCNAME0" xml:base="http://example.org/label" xml:lang="en" class="NMTOKENS" role="string value" rel="string value" rev="string value" typeof="string value" content="string value" datatype="string value" resource="string value" about="string value" property="string value" xml:space="default" width="string value" height="string value" preserveAspectRatio="string value" viewBox="" version="1.0" baseProfile="none" snapshotTime="none" xmlns:svg="http://www.w3.org/2000/svg">
+<svg:svg fill-opacity="inherit" stroke-opacity="inherit" fill="none" fill-rule="inherit" stroke="black" stroke-dasharray="inherit" stroke-dashoffset="inherit" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="inherit" stroke-width="inherit" color="white" color-rendering="auto" vector-effect="none" direction="ltr" unicode-bidi="normal" solid-color="#000000" solid-opacity="inherit" display-align="auto" line-increment="auto" stop-color="#FFFFFF" stop-opacity="inherit" font-family="inherit" font-size="inherit" font-style="normal" font-variant="normal" font-weight="normal" text-anchor="start" text-align="start" id="NCNAME0" xml:base="http://example.org/label" xml:lang="en" class="NMTOKENS" role="string value" rel="string value" rev="string value" typeof="string value" content="string value" datatype="string value" resource="string value" about="string value" property="string value" xml:space="default" width="string value" height="string value" preserveAspectRatio="string value" viewBox="0 0 100.0 100.0" version="1.0" baseProfile="none" snapshotTime="none" xmlns:svg="http://www.w3.org/2000/svg">
   <svg:desc id="NCNAME1" xml:base="http://example.org/label" xml:lang="en" class="NMTOKENS" role="string value" rel="string value" rev="string value" typeof="string value" content="string value" datatype="string value" resource="string value" about="string value" property="string value" xml:space="default" display="inline" visibility="visible" image-rendering="auto" shape-rendering="auto" text-rendering="auto" buffered-rendering="auto" viewport-fill="none" viewport-fill-opacity="inherit">Dummy Text goes here</svg:desc>
   <svg:title id="NCNAME2" xml:base="http://example.org/label" xml:lang="en" class="NMTOKENS" role="string value" rel="string value" rev="string value" typeof="string value" content="string value" datatype="string value" resource="string value" about="string value" property="string value" xml:space="default" display="inline" visibility="visible" image-rendering="auto" shape-rendering="auto" text-rendering="auto" buffered-rendering="auto" viewport-fill="none" viewport-fill-opacity="inherit">Dummy Text goes here</svg:title>
   <svg:path id="NCNAME3" xml:base="http://example.org/label" xml:lang="en" class="NMTOKENS" role="string value" rel="string value" rev="string value" typeof="string value" content="string value" datatype="string value" resource="string value" about="string value" property="string value" xml:space="default" transform="string value" fill-opacity="inherit" stroke-opacity="inherit" fill="none" fill-rule="inherit" stroke="#ffffff" stroke-dasharray="inherit" stroke-dashoffset="inherit" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="inherit" stroke-width="inherit" color="inherit" color-rendering="auto" vector-effect="none" direction="ltr" unicode-bidi="normal" solid-color="black" solid-opacity="inherit" display-align="auto" line-increment="auto" stop-color="white" stop-opacity="inherit" font-family="inherit" font-size="inherit" font-style="normal" font-variant="normal" font-weight="normal" text-anchor="start" text-align="start" d="string value" pathLength="string value">
