@@ -1,3 +1,9 @@
+svgcheck (0.5.14) distribution(s); urgency=low
+
+	* Force a viewBox to be part of the output
+
+-- Jim Schaad <ietf@augustcellars.com>  Fri 12 Apr 2019 12:00:00 -0800
+
 svgcheck (0.5.12) distribution(s); urgency=low
 
 	* Copy the preserve whitespace parameter from rfclint.  This preserves formatting.
